added getSeqFromBed and bed format support in offtargetAnalysis
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@105850 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,18 @@
+CHANGES IN VERSION 1.9.2
+------------------------
+
+NEW FEATURES
+
+     o summary file will contain all input gRNAs even there is no on target in the searching genome. This feature is useful to search for offtarget in a different genome 
+     o support bed format inputFilePath for offTargetAnalysis 
+
+CHANGES IN VERSION 1.9.1
+------------------------
+
+NEW FEATURES
+
+     o added parameter allowed.mismatch.PAM to specify the number of degenerative bases in the PAM sequence. This feature is useful for specifying different PAM.pattern for offtarget search.
+
 CHANGES IN VERSION 1.7.6
 ------------------------
 
