added annotatePaired parameter
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@109416 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,11 @@
+CHANGES IN VERSION 1.9.12
+------------------------
+
+NEW FEATURES
+
+     o added annotatePaired parameter
+     o added parallele processing 
+
 CHANGES IN VERSION 1.9.6
 ------------------------
 
