--- a/inst/NEWS
+++ b/inst/NEWS
@@ -4,7 +4,7 @@ CHANGES IN VERSION 1.9.12
 NEW FEATURES
 
      o added annotatePaired parameter
-     o added parallele processing 
+     o added parallel processing 
 
 CHANGES IN VERSION 1.9.6
 ------------------------
