fix reference in the user Guide
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@109452 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/CRISPRseek.Rnw
+++ b/vignettes/CRISPRseek.Rnw
@@ -156,7 +156,8 @@ considered overlap with restriction enzyme cut site, the enzyme cut pattern
 must overlap with one of the gRNA positions specified in 
 overlap.gRNA.positions, default position 17 and 18. Please note that 
 max.mismatch allowed for off-target finding is set to 4 by default, set it 
-to a larger number will significantly slow down the search. org.Hs.egSYMBOL is entrezID to gene symbol mapping in org.Hs.eg.db package for human. For detailed 
+to a larger number will significantly slow down the search. org.Hs.egSYMBOL is 
+entrezID to gene symbol mapping in org.Hs.eg.db package for human. For detailed 
 parameter settings using function \Rfunction{offTargetAnalysis}, please type 
 help(offTargetAnalysis)
 
@@ -278,8 +279,12 @@ annotateExon = FALSE,findPairedgRNAOnly = TRUE, chromToSearch = "chrX",
 max.mismatch = 0, BSgenomeName = Hsapiens, outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
-\subsection{Scenario 8. Find potential gRNAs preferentially targeting one of two alleles without running time-consuming off-target analysis on all possible gRNAs.}
-Below is an example to search for all gRNAs that target at least one of the alleles. Two files are provided containing sequences that differ by a single nucleotide polymorphism (SNP). The results are saved in file scoresFor2InputSequences.xls in outputDir directory. 
+\subsection{Scenario 8. Find potential gRNAs preferentially targeting one of two
+alleles without running time-consuming off-target analysis on all possible gRNAs.}
+Below is an example to search for all gRNAs that target at least one of the 
+alleles. Two files are provided containing sequences that differ by a single 
+nucleotide polymorphism (SNP). The results are saved in file 
+scoresFor2InputSequences.xls in outputDir directory. 
 \begin{scriptsize}
 <<>>=
 inputFile1Path <- system.file("extdata", "rs362331C.fa",  package = "CRISPRseek")
@@ -291,25 +296,34 @@ seqs <- compare2Sequences(inputFile1Path, inputFile2Path,
 seqs
 @
 \end{scriptsize}
-rs362331C.fa and rs362331T.fa are the names of the two input files. The output file will list all of the possible gRNA sequences for each of the two input sequences and provide a cleavage score for each of the two input sequences. To preferentially target one allele, select gRNA sequences that have the lowest score for the other allele. Selected gRNAs can then be examined for off-target sequences as described in Step 6.
+rs362331C.fa and rs362331T.fa are the names of the two input files. The output 
+file will list all of the possible gRNA sequences for each of the two input 
+sequences and provide a cleavage score for each of the two input sequences. 
+To preferentially target one allele, select gRNA sequences that have the lowest 
+score for the other allele. Selected gRNAs can then be examined for off-target 
+sequences as described in Step 6.
 
-\subsection{Scenario 9. gRNA search and offTarget analysis of super long input sequence (longer than 200kb)
+\subsection{Scenario 9. gRNA search and offTarget analysis of super long input 
+sequence (longer than 200kb)
 }
-Calling the function \Rfunction{offTargetAnalysis} with annotatePaired = FALSE and enable.multicore = TRUE
-will improve the performance. We also suggest split the super long sequence into smaller chunks and perform
-offTarget analysis for each subsequence separately (Thank Alex Williams for sharing this use case at
-https://support.bioconductor.org/p/72994/). In addition, please remember to use repeat masked 
-sequence as input.
+Calling the function \Rfunction{offTargetAnalysis} with annotatePaired = FALSE 
+and enable.multicore = TRUE will improve the performance. We also suggest split 
+the super long sequence into smaller chunks and perform offTarget analysis for
+each subsequence separately (Thank Alex Williams for sharing this use case at
+https://support.bioconductor.org/p/72994/). In addition, please remember to use
+repeat masked sequence as input.
 \begin{scriptsize}
 <<>>=
-results <- offTargetAnalysis(inputFilePath, annotatePaired = FALSE, chromToSearch = "chrX",
-enable.multicore = TRUE, annotateExon = FALSE,
-max.mismatch = 0, BSgenomeName = Hsapiens, outputDir = outputDir, overwrite = TRUE)
+results <- offTargetAnalysis(inputFilePath, annotatePaired = FALSE, 
+    chromToSearch = "chrX",
+    enable.multicore = TRUE, annotateExon = FALSE,
+    max.mismatch = 0, BSgenomeName = Hsapiens, 
+    outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
 \section{References}
-\begin{thebibliography}{99}
-\bibitem[Lihua Julie Zhu]{Zhu 2014}Lihua Julie Zhu Overview of guide 
+\begin{thebibliography}{5}
+\bibitem[Lihua Julie Zhu, 2015]{Zhu, 2015} Lihua Julie Zhu. Overview of guide 
 RNA design tools for CRISPR-Cas9 genome editing technology. Frontiers in Biology.
 August 2015, Volume 10, Issue 4, pp 289-296
 \bibitem[Mali P. et al., 2013]{Mali et al., 2013} Mali P. et al., CAS9 
@@ -318,8 +332,15 @@ for cooperative genome engineering. Nat Biotechnol. 2013. 31(9):833-8
 \bibitem[Hsu, P.D et al., 2013]{Hsu et al., 2013} Hsu, P.D. et al., DNA 
 targeting specificity of rNA-guided Cas9 nucleases. Nat Biotechnol. 
 2013. 31:827-834.
-\bibitem[Doench JG, Hartenian E, Graham DB, Tothova Z, Hegde M, Smith I, Sullender M, Ebert BL, Xavier RJ, Root DE]{Doench et al., 2014} Rational design of highly active sgRNAs for CRISPR-Cas9-mediated gene inactivation. Nat Biotechnol. 2014 Sep 3. doi: 10.1038 nbt.3026
-\bibitem[Lihua Julie Zhu, Benjamin R. Holmes, Neil Aronin and Michael Brodsky]{Zhu et al., 2014}Lihua Julie Zhu, Benjamin R. Holmes, Neil Aronin and Michael Brodsky. CRISPRseek: a Bioconductor package to identify target-specific guide RNAs for CRISPR-Cas9 genome-editing systems. Plos One Sept 23rd 2014
+\bibitem[Doench JG, Hartenian E, Graham DB, Tothova Z, Hegde M, Smith I, 
+Sullender M, Ebert BL, Xavier RJ, Root DE]{Doench et al., 2014} 
+Doench et al., 2014 Rational design of highly active sgRNAs for 
+CRISPR-Cas9-mediated gene inactivation. 
+Nat Biotechnol. 2014 Sep 3. doi: 10.1038 nbt.3026
+\bibitem[Lihua Julie Zhu, Benjamin R. Holmes, Neil Aronin and Michael Brodsky]
+{Zhu et al., 2014} Lihua Julie Zhu, Benjamin R. Holmes, Neil Aronin and Michael
+Brodsky. CRISPRseek: a Bioconductor package to identify target-specific guide
+RNAs for CRISPR-Cas9 genome-editing systems. Plos One Sept 23rd 2014
 \end{thebibliography}
 \section{Session Info}
 <<>>=
