--- a/vignettes/CRISPRseek.Rnw
+++ b/vignettes/CRISPRseek.Rnw
@@ -265,12 +265,17 @@ REpatternFile = REpatternFile,findPairedgRNAOnly = TRUE,
 chromToSearch = "", outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
+
 \subsection{Scenario 7. Quick gRNA finding  with gRNA efficacy prediction 
 }
 Calling the function \Rfunction{offTargetAnalysis} with max.mismatch = 0 
 results in quick gRNA search with gRNA efficacy prediction 
-without off-target analysis. Parameters findgRNAsWithREcutOnly and 
-findPairedgRNAOnly can be tuned to indicate whether searching for gRNAs
+without off-target analysis. Paramter rule.set can be set to 
+Root\_RuleSet2\_2016 to calculate efficacy using the rule set 2 published in 2016.
+By default, gRNA efficacy is predicted using the rule set 1 published in 2014.
+To use the rule set 2, first install python 2.7, then install the python packages: scikit-learn 0.16.1, pickle, pandas, numpy nd scipy.
+In addition, parameters findgRNAsWithREcutOnly and findPairedgRNAOnly 
+can be tuned to indicate whether searching for gRNAs
 overlap restriction enzyme cut sites or not, and whether searching for 
 gRNAs in paired configuration or not.
 \begin{scriptsize}
@@ -280,6 +285,7 @@ annotateExon = FALSE,findPairedgRNAOnly = TRUE, chromToSearch = "chrX",
 max.mismatch = 0, BSgenomeName = Hsapiens, outputDir = outputDir, overwrite = TRUE)
 @
 \end{scriptsize}
+
 \subsection{Scenario 8. Find potential gRNAs preferentially targeting one of two
 alleles without running time-consuming off-target analysis on all possible gRNAs.}
 Below is an example to search for all gRNAs that target at least one of the 
