efficacy is only calculated for on target sequence now

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+CHANGES IN VERSION 1.25.5
+     o efficacy is calculated only for on-target 
+
 CHANGES IN VERSION 1.25.4
      o annotation is now strand-specific 
 
