added gRNA design for the base editor system

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+CHANGES IN VERSION 1.25.9
+     o added parametrs allowing gRNA design for base editor system
+
 CHANGES IN VERSION 1.25.6
      o added parameter ignore.strand to indidate whether gene annotation should be strand-specific
 
