--- a/vignettes/CRISPRseek.Rnw
+++ b/vignettes/CRISPRseek.Rnw
@@ -376,7 +376,7 @@ is set to C, editingWindow to 4 to 8 and editingWindow.offtargets to
 \begin{scriptsize}
 <<>>=
 offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly =  FALSE,
-                 REpatternFile = REpatternFile, findPairedgRNAOnly = FALSE,
+                 findPairedgRNAOnly = FALSE,
                  annotatePaired = FALSE,
                  BSgenomeName = Hsapiens, chromToSearch = "chrX",
                  txdb = TxDb.Hsapiens.UCSC.hg19.knownGene,
@@ -403,6 +403,32 @@ and correct.seq accordingly.
 
 Please type help(offTargetAnalysis) for detailed
 description of these parameters and examples for designing PE.
+
+\subsection{Scenario 13. Predict indels and their frequencies for Cas9 genome editing systems}
+Calling the function \Rfunction{offTargetAnalysis} with predIndelFreq set to TRUE.
+The first command outputs the gRNA name,gRNAPlusPAM sequence,
+offtarget sequence, gene name, predicted offtarget score, genomic location,
+and predicted efficacy. The second command outputs the indel locations and frequencies for the
+first target site. Currently, only the Lindel method by Chen et al., 2019 is available. 
+To use this feature, users need to install python package Lindel first.
+Please type help(predictRelativeFreqIndels) for more details.
+
+\begin{scriptsize}
+<<>>=
+results <- offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly =  FALSE,
+                 findPairedgRNAOnly = FALSE,
+                 annotatePaired = FALSE,
+                 BSgenomeName = Hsapiens, chromToSearch = "chrX",
+                 txdb = TxDb.Hsapiens.UCSC.hg19.knownGene,
+                 orgAnn = org.Hs.egSYMBOL, max.mismatch = 1,
+                 outputDir = outputDir, overwrite = TRUE,
+                 scoring.method = "CFDscore",
+                 predIndelFreq = TRUE)
+
+names(results$indelFreq)
+results$indelFreq[[1]]
+@
+\end{scriptsize}
 
 \section{References}
 \begin{thebibliography}{5}
@@ -438,6 +464,11 @@ genomic DNA without double-stranded DNA cleavage. Nature 533, 420–424 (2016).
 \bibitem[Gaudelli et al., 2017]{Gaudelli et al., 2017}Gaudelli, N. M. et al. 
 Programmable base editing of A or T to G or C in genomic DNA without 
 DNA cleavage. Nature 551, 464–471 (2017).
+\bibitem[Chen et al., 2019]{Che et al., 2019}Wei Chen, Aaron McKenna, Jacob Schreiber et al.,
+Massively parallel profiling and predictive modeling of the 
+outcomes of CRISPR/Cas9-mediated double-strand break repair, 
+Nucleic Acids Research, Volume 47, Issue 15, 05 September 2019, 
+Pages 7989–8003, https://doi.org/10.1093/nar/gkz487.
 \end{thebibliography}
 \section{Session Info}
 <<>>=
