--- a/vignettes/CRISPRseek.Rnw
+++ b/vignettes/CRISPRseek.Rnw
@@ -428,7 +428,9 @@ results <- offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly =  FALSE,
                  predIndelFreq = TRUE)
 
 names(results$indelFreq)
-results$indelFreq[[1]]
+head(results$indelFreq[[1]])
+
+mapply(write.table, results$indelFreq, file=paste0(names(results$indelFreq), '.xls'), sep = "\t")
 @
 \end{scriptsize}
 
