--- a/vignettes/CRISPRseek.Rnw
+++ b/vignettes/CRISPRseek.Rnw
@@ -417,7 +417,8 @@ is available. Please type help(predictRelativeFreqIndels) for more details.
 
 \begin{scriptsize}
 <<>>=
-results <- offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly =  FALSE,
+resultsIndelF <- offTargetAnalysis(
+                 inputFilePath, findgRNAsWithREcutOnly =  FALSE,
                  findPairedgRNAOnly = FALSE,
                  annotatePaired = FALSE,
                  BSgenomeName = Hsapiens, chromToSearch = "chrX",
@@ -428,12 +429,12 @@ results <- offTargetAnalysis(inputFilePath, findgRNAsWithREcutOnly =  FALSE,
                  PAM.pattern  = "NNG$|NGN$",
                  predIndelFreq = TRUE)
 
-names(results$indelFreq)
-head(results$indelFreq[[1]])
-head(results$summmary[,1:6])
-
-mapply(write.table, results$indelFreq, file=paste0(names(results$indelFreq), '.xls'), 
-    sep = "\t", row.names = FALSE)
+ if(exists("resultsIndelF")) 
+ {
+     print(head(resultsIndelF$indelFreq[[1]]))
+     mapply(write.table, resultsIndelF$indelFreq, file=paste0(names(resultsIndelF$indelFreq), '.xls'), 
+        sep = "\t", row.names = FALSE)
+  }
 @
 \end{scriptsize}
 
